--- a/index.html
+++ b/index.html
@@ -90,6 +90,81 @@
             </div>
         </div>
     </header>
+    <img class="blur" src="images/blur.png" alt="blur">
+    <section class="section-find">
+        <div class="section-title">
+            <img src="images/horizontal-line.png" alt="horizontal line">
+            <p class="section-title__label">See Tips And Trick From Our Partnership</p>
+            <h1 class="section-title__title">Find Our More About <br>
+                Selling And Buying Homes
+            </h1>
+            <button class="section-title__button">More Article</button>
+        </div>
+        <div class="section-sale">
+            <div class="secondary-card">
+                <div class="card">
+                    <img src="images/living-room.png" alt="living room">
+                    <div class="card__about">
+                        <div class="person">
+                            <img src="images/diana.png" alt="diana woman">
+                            <h5 class="person__name">Dianne Russell</h5>
+                        </div>
+                        <p class="card-way">The Things We Need To Check When <br> 
+                            We Want To Buy A House</p>
+                        <div class="time">
+                            <img src="images/clock.png" alt="clock">
+                            <h6 class="time__date">4 min read | 25 Apr 2021</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/small-house.png" alt="small house">
+                    <div class="card__about">
+                        <div class="person">
+                            <img src="images/courtney.png" alt="courtney man">
+                            <h5 class="person__name">Courtney Henry</h5>
+                        </div>
+                        <p class="card-way">7 Ways To Distinguish The Quality Of <br>
+                            The House We Want To Buy</p>
+                        <div class="time">
+                            <img src="images/clock.png" alt="clock">
+                            <h6 class="time__date">6 min read | 24 Apr 2021</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/big-house.png" alt="big house">
+                    <div class="card__about">
+                        <div class="person">
+                            <img src="images/darlene.png" alt="darlene man">
+                            <h5 class="person__name">Darlene Robertson</h5>
+                        </div>
+                        <p class="card-way">The Best Way To Know The Quality Of <br>
+                            The House We want To Buy</p>
+                        <div class="time">
+                            <img src="images/clock.png" alt="clock">
+                            <h6 class="time__date"> 2 min read | 24 Apr 2021</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="basic-card">
+                <img src="images/villa-big-size.png" alt="villa">
+                <div class="person person_retreat">
+                    <img src="images/cameron.png" alt="cameron man">
+                    <h5 class="person__name">Cameron Williamson</h5>
+                </div>
+                <p class="card-way card-way_size">12 Things To Know Before Buying A House</p>
+                <h3 class="label">Want to buy a house but are unsure about what we should know, here I will try to <br> 
+                    explain what we should know and check when we want to buy a house
+                </h3>
+                <div class="time">
+                    <img src="images/clock.png" alt="clock">
+                    <h6 class="time__date"> 8 min read | 25 Apr 2021</h6>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div>
             <div class="logo logo-footer">
