--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </h1>
                 <p class="first-section__p">Everything you need about finding your place to live will be <br>
                    here, where it will be easier for you </p>
-                <div class="search">
+                <form method="post" class="search" enctype="text/plain">
                     <img class="search__img" src="images/mark.png" alt="mark">
-                    <p class="search__p">Search for the location you want!</p>
+                    <input type="text" class="search__p" placeholder="Search for the location you want!"></input>
                     <button class="search__button">Search <img src="images/right-arrow.png" alt="right-arrow"></button>
-                </div>
+                </form>
                 <p class="first-section__p">Our Partnership</p>
                 <div class="logo-partnership">
                     <img src="images/traveloka-logo.png" alt="traveloka-logo">
@@ -95,7 +95,7 @@
         <div class="section-title">
             <img src="images/horizontal-line.png" alt="horizontal line">
             <p class="section-title__label">See Tips And Trick From Our Partnership</p>
-            <h1 class="section-title__title">Find Our More About <br>
+            <h1 class="section-title__title title">Find Our More About <br>
                 Selling And Buying Homes
             </h1>
             <button class="section-title__button">More Article</button>
@@ -164,6 +164,26 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="subscribe">
+        <img class="subscribe__image" src="images/background.png" alt="background">
+        <div class="subscribe-title">
+            <h1 class="subscribe__title title">Subscribe For More Info <br>
+                And Update From Hounter</h1>
+            <form action="mailto:jaldak14@gmail.com" class="subscribe-search" method="post" enctype="text/plain">
+                <img class="subscribe-search__img" src="images/email.png" alt="email">
+                <input type="search" class="subscribe-search__email" placeholder="Your email here"'></input>
+                <button class="subscribe-search__button">Subscribe Now</button>
+            </form>
+        </div>
+        <img class="subscribe-image__chair" src="images/chair.png" alt="chair">
+        <img class="subscribe-image__mini-chair" src="images/mini-chair.png" alt="mini chair">
+        <img class="subscribe-image__castle" src="images/castle.png" alt="castle">
+        <img class="subscribe-image__window" src="images/window.png" alt="window">
+        <img class="subscribe-image__beauty-girl" src="images/beauty-girl.png" alt="beauty girl">
+        <img class="subscribe-image__guy" src="images/guy.png" alt="guy">
+        <img class="subscribe-image__diana" src="images/diana-email.png" alt="diana">
+        <img class="subscribe-image__courtney" src="images/courtney-email.png" alt="courtney">
     </section>
     <footer>
         <div>
