--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
             </div>
         <div class="basic-section">
             <div class="first-section">
-                <h1 class="first-section__h1">Find The Place To <br>
+                <h1>Find The Place To <br>
                     Live <span>Your Dreams</span> <br>
                     Easily Here
                 </h1>
-                <p class="first-section__p">Everything you need about finding your place to live will be <br>
+                <p">Everything you need about finding your place to live will be <br>
                    here, where it will be easier for you </p>
                 <form method="post" class="search" enctype="text/plain">
                     <img class="search__img" src="images/mark.png" alt="mark">
                     <input type="text" class="search__p" placeholder="Search for the location you want!"></input>
                     <button class="search__button">Search <img src="images/right-arrow.png" alt="right-arrow"></button>
                 </form>
-                <p class="first-section__p">Our Partnership</p>
+                <p>Our Partnership</p>
                 <div class="logo-partnership">
                     <img src="images/traveloka-logo.png" alt="traveloka-logo">
                     <img src="images/tiket-logo.png" alt="tiket-logo">
