--- a/index.html
+++ b/index.html
@@ -202,22 +202,22 @@
         </div>
         <div class="info">
             <span>Property</span>
-            <p class="footer__p">House</p>
-            <p class="footer__p">Apartment</p>
-            <p class="footer__p">Villa</p>
+            <p class="footer__p info__footer">House</p>
+            <p class="footer__p info__footer">Apartment</p>
+            <p class="footer__p info__footer">Villa</p>
         </div>
         <div class="info">
             <span>Article</span>
-            <p class="footer__p">New Article</p>
-            <p class="footer__p">Popular Article</p>
-            <p class="footer__p">Most Read</p>
-            <p class="footer__p">Tips & Tricks</p>
+            <p class="footer__p info__footer">New Article</p>
+            <p class="footer__p info__footer">Popular Article</p>
+            <p class="footer__p info__footer">Most Read</p>
+            <p class="footer__p info__footer">Tips & Tricks</p>
         </div>
         <div class="info">
             <span>Contact</span>
-            <p class="footer__p">2464 Royal Ln. Mesa, New Jersey 45463</p>
-            <p class="footer__p">(671) 555-0110</p>
-            <p class="footer__p">info@hounter.com</p>
+            <p class="footer__p info__footer">2464 Royal Ln. Mesa, New Jersey 45463</p>
+            <p class="footer__p info__footer">(671) 555-0110</p>
+            <p class="footer__p info__footer">info@hounter.com</p>
         </div>
         <img class="footer__img bottom-ball" src="images/bottom-ball.png" alt="bottom-ball">
         <img class="footer__img right-ball"src="images/right-ball.png" alt="right-ball">
