--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
 </head>
 <body>
-    <header>
+    <section class="container">
+    <header class="header">
         <img class="color-blur" src="images/color-blur.png" alt="color-blur">
             <div class="top-line">
                 <div class="logo">
@@ -233,7 +234,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/big-house.png" alt="big house">
+                    <img class="card__image" src="images/big-house.png" alt="big house">
                     <div class="card__about">
                         <div class="card-person">
                             <img src="images/darlene.png" alt="darlene man">
@@ -249,7 +250,7 @@
                 </div>
             </div>
             <div class="basic-card">
-                <img src="images/villa-big-size.png" alt="villa">
+                <img class="basic-card__image" src="images/villa-big-size.png" alt="villa">
                 <div class="card-person person_retreat">
                     <img src="images/cameron.png" alt="cameron man">
                     <h5 class="person__name">Cameron Williamson</h5>
@@ -322,6 +323,7 @@
         <img class="footer__img bottom-ball" src="images/bottom-ball.png" alt="bottom-ball">
         <img class="footer__img right-ball"src="images/right-ball.png" alt="right-ball">
     </footer>
+    </section>
     <script src="https://kit.fontawesome.com/0d8cc36a0e.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
